--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Secure login system with OAuth integration" />
-    <meta name="theme-color" content="#667eea" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes" />
+    <meta name="description" content="SPOT-Q - Quality Control Management System" />
+    <meta name="theme-color" content="#273F4F" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
 
     <!-- Fonts -->
@@ -18,7 +18,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
 
-    <title>Secure Login - Authentication System</title>
+    <title>SPOT-Q - Quality Control System</title>
 
     <style>
       /* Minimal critical styles for initial paint */
